--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
 p{
 	color: red;
 }
+
+body {
+  font-family: "Gafata", sans-serif;
+  font-size: 48px;
+  text-shadow: 4px 4px 4px #aaa;
+}
+
+h1 { font-family: "Sanchez", Arial, serif;
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: "Gafata", sans-serif;
+	font-family: "Sanchez", serif;
+	src: url (http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400)
