--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ p {
 body {
   font-family: "Gafata", sans-serif;
   font-size: 48px;
-  text-shadow: 4px 4px 4px #aaa;
+  /*------text-shadow: 4px 4px 4px #aaa;------*/
 }
 
 h1 { font-family: "Sanchez", Arial, serif;
