--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,13 @@ h1 { font-family: "Sanchez", Arial, serif;
 	font-family: "Gafata", sans-serif;
 	font-family: "Sanchez", serif;
 	src: url (http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400)
+}
+
+header {
+	background: #5174d5:
+}
+
+aside {
+	color: #e3e3e3
+}
+
