--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,11 @@ h1, h2, h3 { font-family: "Sanchez", Arial, serif;
 	src: url (http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400)
 }
 
-header {
+#header {
 	background: #5174d5:
 }
 
 aside {
-	color: #e3e3e3
+	background: #e3e3e3
 }
 
