--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ h1, h2, h3 { font-family: "Sanchez", Arial, serif;
 	src: url (http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400)
 }
 
-#header {
+header {
 	background: #5174d5:
 }
 
