--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body {
   /*------text-shadow: 4px 4px 4px #aaa;------*/
 }
 
-h1, h2, h3 { font-family: "Sanchez", Arial, serif;
+h2, h3 { font-family: "Sanchez", Arial, serif;
 	font-weight: 400;
 	color: #282626
 }
