--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,17 @@ body {
   /*------text-shadow: 4px 4px 4px #aaa;------*/
 }
 
+h1 { font-family: "Sanchez", Arial, serif;
+	font-weight: 400;
+	color: #282626
+	font-size: 36px
+}
+
+
 h2, h3 { font-family: "Sanchez", Arial, serif;
 	font-weight: 400;
 	color: #282626
+	font-size: 30px
 }
 
 @font-face {
