adjusting text sizes

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ p {
 
 body {
   font-family: "Gafata", sans-serif;
-  font-size: medium;
+  font-size: 25px;
   /*------text-shadow: 4px 4px 4px #aaa;------*/
 }
 
