--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,30 @@
 @font-face {
-	font-family: "Gafata", sans-serif;
-	font-family: "Sanchez", serif;
+	font-family: Gafata, sans-serif;
+	font-family: Sanchez, serif;
 	src: url (http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400)
 }
 
 p {
-	font-family: "Gafata", sans-serif;
+	font-family: Gafata, sans-serif;
 	color: #4F4C4C;
 	font-size: 16px;
 }
 /*
 body {
-  font-family: "Gafata", sans-serif;
+  font-family: Gafata, sans-serif;
   /*------text-shadow: 4px 4px 4px #aaa;------*/
 }
 */
 
-h1 { font-family: "Sanchez", Arial, serif;
+h1 {
+	font-family: Sanchez, Arial, serif;
 	font-weight: 400;
 	color: #282626
 	font-size: 36px
 }
 
-h2, h3 { font-family: "Sanchez", Arial, serif;
+h2, h3 {
+	font-family: Sanchez, Arial, serif;
 	font-weight: 400;
 	color: #282626
 	font-size: 30px
