--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,13 @@ p {
 	color: #4F4C4C;
 	font-size: 16px;
 }
+
+ul {
+	font-family: Gafata, sans-serif;
+	color: #4F4C4C;
+	font-size: 13px;
+}
+
 /*
 body {
   font-family: Gafata, sans-serif;
