updating css body to center and give it a width

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,9 @@
 }
 
 body {
-  font-family: Gafata, sans-serif;
+	width: 800px
+	margin: 0 auto
+	font-family: Gafata, sans-serif;
   /*------text-shadow: 4px 4px 4px #aaa;------*/
 }
 
