correcting previous css additions

--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,8 @@
 }
 
 body {
-	width: 800px
-	margin: 0 auto
+	width: 800px;
+	margin: 0 auto;
 	font-family: Gafata, sans-serif;
   /*------text-shadow: 4px 4px 4px #aaa;------*/
 }
