--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,10 @@ p {
 	font-size: 16px;
 }
 
+.MarioKartWii_logo.jpg img{
+	float: left;
+}
+
 #main_nav {
 	font-family: Gafata, sans-serif;
 	color: #4F4C4C;
