--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,11 @@
 	src: url (http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400)
 }
 
-body {
+#wrapper {
 	color: #E0F6FC;
+}
+
+body {
 	width: 800px;
 	margin: 0 auto;
 	font-family: Gafata, sans-serif;
