--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 
 body {
 	width: 800px;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 	font-family: Gafata, sans-serif;
 	padding: 0;
   /*------text-shadow: 4px 4px 4px #aaa;------*/
