--- a/css/main.css
+++ b/css/main.css
@@ -27,8 +27,8 @@ body {
 	font-size: 14px;
 	width: 600px;
 	background: #DBCBCB;
-	padding: 0;
-	margin 0;
+	padding: 0 auto;
+	margin 0 auto;
 }
 
 #main_nav li {
