--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body {
 	font-family: Gafata, sans-serif;
 	/*color: #4F4C4C;*/
 	font-size: 14px;
-	/*width: 600px;*/
+	width: 600px;
 	background: #DBCBCB;
 	padding: 0 auto;
 	margin: 0;
