--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
 	font-family: Gafata, sans-serif;
 	padding: 0;
 	background-image:url('https://github.com/Jabers/my-stash/blob/gh-pages/images/kart_action.jpg');
-	background-color:#cccccc;
+	/*background-color:#cccccc;/*
   /*------text-shadow: 4px 4px 4px #aaa;------*/
 }
 
