--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,14 @@
 }
 
 body {
+	background-image: url('images/kart_action.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed
+	background-color: #cccccc;
 	width: 800px;
 	margin: 0 auto;
 	font-family: Gafata, sans-serif;
 	padding: 0;
-	background-image:url('images/kart_action.jpg');
-	background-color:#cccccc;
   /*------text-shadow: 4px 4px 4px #aaa;------*/
 }
 
