--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body {
 	background-image: url('../images/kart_action.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed
+	background-position: left center;
 	background-color: #cccccc;
 	width: 800px;
 	margin: 0 auto;
