--- a/css/main.css
+++ b/css/main.css
@@ -7,14 +7,14 @@
 body {
 	background-image: url('../images/kart_action.jpg');
 	background-repeat: no-repeat;
-	background-attachment: fixed
+/*--background-attachment: fixed--*/
 	background-position: left center;
 	background-color: #cccccc;
 	width: 800px;
 	margin: 0 auto;
 	font-family: Gafata, sans-serif;
 	padding: 0;
-  /*------text-shadow: 4px 4px 4px #aaa;------*/
+/*------text-shadow: 4px 4px 4px #aaa;------*/
 }
 
 #wrapper {
