changing body bg color

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
 	background-repeat: no-repeat;
 /*--background-attachment: fixed--*/
 	background-position: left center;
-	background-color: #cccccc;
+	background-color: #b7b7b7;
 	width: 800px;
 	margin: 0 auto;
 	font-family: Gafata, sans-serif;
