--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,6 @@ body {
 	margin: 0 auto;
 	font-family: Gafata, sans-serif;
 	padding: 0;
-/*------text-shadow: 4px 4px 4px #aaa;------*/
 }
 
 #wrapper {
@@ -47,6 +46,7 @@ body {
 }
 
 #tagline h1 {
+	text-shadow: 4px 4px 4px #aaa;
 	clear: both;
 }
 
