--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,15 @@ h2, h3 {
 	font-size: 30px
 }
 
-#top_main #middle_main #bottom_main h2{
+#top_main h2{
+	text-shadow: 4px 4px 4px #aaa;
+}
+
+#middle_main h2{
+	text-shadow: 4px 4px 4px #aaa;
+}
+
+#bottom_main h2{
 	text-shadow: 4px 4px 4px #aaa;
 }
 
