modify html and css for character gallery to apply color and opacity

--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,10 @@ h2, h3 {
 	text-shadow: 4px 4px 4px #aaa;
 }
 
+#char_gal {
+	background: #94040e;
+}
+
 #bottom_main h2{
 	text-shadow: 4px 4px 4px #aaa;
 }
