--- a/css/main.css
+++ b/css/main.css
@@ -74,8 +74,7 @@ h2, h3 {
 }
 
 #char_gal {
-	background: #94040e;
-	background-opacity: 0.5;
+	background-color: #94040e 0.5;
 }
 
 #bottom_main h2{
