--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,10 @@ body {
 	float: left;
 }
 
+a: hover {
+	color: #fc7e86;
+}
+
 #main_nav {
 	font-family: Gafata, sans-serif;
 	/*color: #4F4C4C;*/
