--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
 body {
 	background-image: url('../images/kart_action.png');
 	background-repeat: no-repeat;
-	background-attachment: fixed
+/*--background-attachment: fixed--*/
 	background-position: center center;
 	background-color: #fff6d2;
 	width: 800px;
