--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,10 @@ h2, h3 {
 	background-color: rgba(148,4,14,.5);
 }
 
+#char_gal li {
+	list-style-type: circle;
+}
+
 #bottom_main h2{
 	text-shadow: 4px 4px 4px #aaa;
 }
