playing with float on img gal

--- a/css/main.css
+++ b/css/main.css
@@ -101,13 +101,10 @@ ol li {
 	float: left;
 }
 
-#char_gal_two {
-	float: clear;
-}
-
 #char_gal_two li {
 	list-style-type: none;
 	float: left;
+	clear: both;
 }
 
 #bottom_main h2{
