--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,10 @@ ol li {
 #char_gal_one li {
 	list-style-type: none;
 	float: left;
-	/*clear: both;*/
+}
+
+#char_gal_one {
+	clear: both;
 }
 
 #char_gal_two li {
