editing colors for main nav

--- a/css/main.css
+++ b/css/main.css
@@ -35,10 +35,10 @@ body {
 } */
 
 #main_nav a:hover {
-	color: #ff0;
+	color: #ffff00;
 }
 
-a:visited {
+#main_nav a:visited {
 	color: #fc7e86;
 }
 
