--- a/css/main.css
+++ b/css/main.css
@@ -32,10 +32,11 @@ body {
 #main_nav a:hover {
 	color: #90e03a;
 }
-
+/*
 #main_nav a:visited {
 	color: #3abce0;
 }
+*/
 #main_nav {
 	font-family: Gafata, sans-serif;
 	/*color: #4F4C4C;*/
