--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,12 @@ ol li {
 	-moz-column-count: 3; /* Firefox */
 	-webkit-column-count: 3; /* Safari and Chrome */
 	column-count: 3;
+	-moz-column-gap: 20px; /* Firefox */
+	-webkit-column-gap: 20px; /* Safari and Chrome */
+	column-gap: 20px;
+	-moz-column-rule: 1px outset #2b2b35; /* Firefox */
+	-webkit-column-rule: 1px outset #2b2b35; /* Safari and Chrome */
+	column-count: 1px outset #2b2b35;
 }
 
 #char_gal {
