--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ ol li {
 	column-gap: 20px;
 	-moz-column-rule: 1px outset #2b2b35; /* Firefox */
 	-webkit-column-rule: 1px outset #2b2b35; /* Safari and Chrome */
-	column-count: 1px outset #2b2b35;
+	column-rule: 1px outset #2b2b35;
 }
 
 #char_gal {
