--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ body {
 
 #main_nav li {
 	width: 200px;
-	background: rgba(148,4,14,.5);
+	background: #94040e;
 	list-style-type: none;
 	color: #FFF;
 	text-decoration: none;
