--- a/css/main.css
+++ b/css/main.css
@@ -148,11 +148,11 @@ body {
 }
 
 #main_nav li {
-	width: 200px;
+/*	width: 200px;
 	background: #94040e;
 	list-style-type: none;
 	color: #FFF;
-	text-decoration: none;
+	text-decoration: none;  */
 	float: left;
 }
 
