--- a/css/main.css
+++ b/css/main.css
@@ -151,8 +151,9 @@ body {
 /*	width: 200px;
 	background: #94040e;
 	list-style-type: none;
-	color: #FFF;  */
-	text-decoration: none;
+	color: #FFF;
+	text-decoration: none;  */
+	list-style-type: none;
 	float: left;
 }
 
