--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,10 @@ ol li {
 	column-gap: 20px;
 }
 
+#categories ol{
+	display: block;
+}
+
 #char_gal {
 	background-color: rgba(148,4,14,.5);
 	overflow: hidden;
