--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,8 @@
 	/* Mobile Portrait size to Mobile Landscape size (devices and browsers) */
 	@media only screen and (max-width: 479px) {
 		#wrapper {background-color: #fff6d2;}
+		#categories {columns: none;}
+	}
 
 html {
 	height: 100%;
