--- a/css/main.css
+++ b/css/main.css
@@ -28,10 +28,6 @@ html {
 }
 
 body {
-	background-image: url('../images/kart_action.png');
-	background-repeat: no-repeat;
-/*--background-attachment: fixed--*/
-	background-position: center center;
 	max-width: 800px;
 	margin: 36px auto;
 	font-family: 100%/1.5 Gafata, sans-serif;
@@ -41,6 +37,11 @@ body {
 #wrapper {
 	width: 100%; /*800px*/
 	margin: 0 auto;
+	background-color: #fff6d2;
+	background-image: url('../images/kart_action.png');
+	background-repeat: no-repeat;
+/*--background-attachment: fixed--*/
+	background-position: center center;
 	border: 1px dashed #424242;
 }
 
