--- a/css/main.css
+++ b/css/main.css
@@ -1,48 +1,51 @@
 @font-face {
 	font-family: Gafata, sans-serif;
 	font-family: Sanchez, serif;
-	src: url (http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400)
+	src: url (http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400);
 }
-
-/* =Media Queries
-============================================ */
-
-	/* Tablet Portrait size to standard 960 (devices and browsers) */
-	@media screen and (min-width: 768px) and (max-width:959px) {
-		#wrapper {background-color: #fff6d2;}
-	}
-	
-	/* Mobile Landscape size to Tablet Portrait */
-	@media only screen and (min-width: 480px) and (max-width: 767px) {
-		#wrapper {background-color: #fff6d2;}
-	}
-	
-	/* Mobile Portrait size to Mobile Landscape size (devices and browsers) */
-	@media only screen and (max-width: 479px) {
-		#wrapper {background-color: #fff6d2;}
-		#categories {columns: none;}
-	}
 
 html {
 	height: 100%;
 }
 
 body {
+	background-color: #fff6d2;
 	background-image: url('../images/kart_action.png');
-	background-repeat: no-repeat;
-/*--background-attachment: fixed--*/
+	background-attachment: scroll;
 	background-position: center center;
+	background-repeat: no-repeat;
 	max-width: 800px;
-	margin: 36px auto;
-	font-family: 100%/1.5 Gafata, sans-serif;
+	margin: 0 auto;
+	font-family: Gafata, sans-serif;
+	font-size: 100%/1.5;
 	padding: 0;
 }
 
 #wrapper {
 	width: 100%; /*800px*/
 	margin: 0 auto;
-	background-color: #fff6d2;
-	border: 1px dashed #424242;
+	padding: 0% 4.375% /* 35px/800px */ 4.475%;
+	border: 1px dotted #424242;
+}
+
+#logo {
+	border: solid 1px #000000;
+	width: 300px;
+	height: 184px;
+	float: left;
+}
+
+#main_nav {
+	font-family: Gafata, sans-serif;
+}
+
+#main_nav a:hover {
+	color: #90e03a;
+}
+
+#main_nav li {
+	list-style-type: none;
+	float: left;
 }
 
 /* button 
@@ -57,7 +60,7 @@ body {
 	cursor: pointer;
 	text-align: center;
 	text-decoration: none;
-	font: 14px/100% Arial, Helvetica, sans-serif;
+	font: 14px/100% Gafata, Helvetica, sans-serif;
 	padding: .5em 2em .55em;
 	text-shadow: 0 1px 1px rgba(0,0,0,.3);
 	-webkit-border-radius: .5em; 
@@ -79,6 +82,9 @@ body {
 	padding: .2em 1em .275em;
 }
 /* end button 
+---------------------------------------------- */
+
+/* begin button colors
 ---------------------------------------------- */
 
 /* red button */
@@ -150,35 +156,8 @@ body {
 }
 /* end green button */
 
-#logo {
-	/*margin: 0;*/
-	border: solid 1px #000000;
-	width: 300px;
-	height: 184px;
-	float: left;
-}
-
-#main_nav a:hover {
-	color: #90e03a;
-}
-
-#main_nav {
-	font-family: Gafata, sans-serif;
-	/*color: #4F4C4C;*/
-	font-size: 14px;
-	/*width: 600px;*/
-	background: #DBCBCB;
-}
-
-#main_nav li {
-/*	width: 200px;
-	background: #94040e;
-	list-style-type: none;
-	color: #FFF;
-	text-decoration: none;  */
-	list-style-type: none;
-	float: left;
-}
+/* end button colors
+---------------------------------------------- */
 
 #tagline h1 {
 	text-shadow: 4px 4px 4px #aaa;
@@ -188,16 +167,23 @@ body {
 h1 {
 	font-family: Sanchez, Arial, serif;
 	font-weight: 400;
-	color: #282626
-	font-size: 36px
+	color: #282626;
+	font-size: 2.250em /* 36px */;
 	clear: both;
 }
 
-h2, h3 {
+h2 {
 	font-family: Sanchez, Arial, serif;
 	font-weight: 400;
-	color: #282626
-	font-size: 30px
+	color: #282626;
+	font-size: 1.875em /* 30px */;
+}
+
+h3 {
+	font-family: Sanchez, Arial, serif;
+	font-weight: 400;
+	color: #282626;
+	font-size: 1.250em /* 20px */;
 }
 
 #top_main h2{
@@ -223,13 +209,12 @@ ol li {
 	column-gap: 20px;
 }
 
-#categories ol{
-	display: block;
-}
-
 #char_gal {
+	width: 46.875% /* 375px/800px */;
 	background-color: rgba(148,4,14,.5);
-	overflow: hidden;
+	/*overflow: hidden;*/
+	float: left;
+	padding: 0;
 }
 
 #char_gal_one li {
@@ -238,8 +223,7 @@ ol li {
 	height: 50px;
 	width: 50px;
 	border: solid 1px #94040e;
-	margin-left: 15px;
-	margin-bottom: 15px;
+	margin: 0px 15px 15px 0px;
 }
 
 #char_gal_two {
@@ -252,24 +236,102 @@ ol li {
 	height: 50px;
 	width: 50px;
 	border: solid 1px #94040e;
-	margin-left: 15px;
+	margin: 0px 15px 15px 0px;
+}
+
+p {
+	font-family: Gafata, sans-serif;
+	color: #4F4C4C;
+	font-size: 1em /* 16px */;
+}
+
+#aside {
+	/*display: block;*/
+	font-family: Gafata, sans-serif;
+	font-size: 1.563em /* 25px */;
+	/*clear: both;*/
+	float: right;
+	width: 37.5% /* 300px/800px */;
+	/*height: 250px;*/
+	padding: 0;
+	background-color: rgba(255,255,255,.3);
+	border: 1px dotted #94040e;
+}
+
+article {
+	font-family: Gafata, sans-serif;
+	font-size: 1.563em /* 25px */;
+}
+
+#aside p {
+	text-align:center;
+}
+
+#bottom_main {
+	clear: both;
 }
 
 #bottom_main h2{
 	text-shadow: 4px 4px 4px #aaa;
 }
 
-p {
-	font-family: Gafata, sans-serif;
-	color: #4F4C4C;
-	font-size: 16px;
-}
-
-aside {
-	background: #e3e3e3
-}
-
 #cta {
 	background-color: #000249;
 	color: #FFF;
+}
+
+/* Media Queries
+============================================ */
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media screen and (min-width: 768px) and (max-width:959px) {
+#wrapper {
+	background-color: #fff6d2;
+}
+}
+
+/* Mobile Landscape size to Tablet Portrait */
+@media screen and (min-width: 480px) and (max-width: 767px) {
+body {
+	background-image: none;
+	width: 100%;
+	max-width: 80%;
+}
+}
+
+#wrapper {
+	background-color: #fff6d2;
+}
+
+#main_nav {
+	/*clear: both;*/
+}
+
+#aside {
+	clear: both;
+	float: none;
+	width: 50%;
+	height: 50%;
+	font-size: 80%;
+}
+
+/* Mobile Portrait size to Mobile Landscape size (devices and browsers) */
+@media screen and (max-width: 479px) {
+body {
+	background-image: none;
+}
+
+#wrapper {
+	background-color: #fff6d2;
+	width: 100%;
+	max-width: 70%;
+}
+
+#main_nav {
+	clear: both;
+}
+
+#char_gal {
+	float: none;
+}
 }
