mimicing css swatch for example

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+/* Color Swatch ------------------------------------
+	hot pink			ff28bc
+	sexy silver			bcbcbc
+	electric blue		0d7cff
+	passion purple		9112ff
+--------------------------------------------------*/
+
 p {
 	color: red;
 	size: 15px;
