--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@ body {
 .demo {
 	background-color: #999;
 	border: 3px solid #666;
+	border-top-left-radius: 20px;
+	border-bottom-right-radius: 20px;
 }
 
 p {
