--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,9 @@ body {
 	border: 3px solid #666;
 	border-top-left-radius: 20px;
 	border-bottom-right-radius: 20px;
+	-moz-box-shadow: inset 2px 2px 2px #111;
+	-webkit-box-shadow: inset 2px 2px 2px #111;
+	box-shadow: inset 2px 2px 2px #111;
 }
 
 p {
