--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ body {
 	-moz-box-shadow: inset 2px 2px 2px #111;
 	-webkit-box-shadow: inset 2px 2px 2px #111;
 	box-shadow: inset 2px 2px 2px #111;
+	padding-left: 5px;
 }
 
 p {
