--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,12 @@
 --------------------------------------------------*/
 
 body {
-	width: 790px;
+	margin: 0;
+}
+
+#wrapper {
+	width: 800px;
+	margin: 0 auto;
 }
 
 .demo {
