disabled p bg color

--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ ol li {
 
 p {
 	font-size: 15px;
-	background-color: #9112ff;
+	/* background-color: #9112ff; */
 }
 
 /* pseudo classes for styling links */
