--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 --------------------------------------------------*/
 
 body {
-	margin: 0;
+	/*margin: 0;*/
 	background-color: #bcbcbc;
 }
 
@@ -19,7 +19,7 @@ body {
 header {
 	display: inline;
 	/*margin: 0;*/
-	background-color: green;
+	background-color: white;
 	float: left;
 }
 
