--- a/css/main.css
+++ b/css/main.css
@@ -6,19 +6,19 @@
 --------------------------------------------------*/
 
 body {
-	/*margin: 0;*/
+	margin: 0;
 	background-color: #bcbcbc;
 }
 
 #wrapper {
 	width: 800px;
-	/*margin: 0 auto;*/
+	margin: 0 auto;
 	background-color: #0d7cff;
 }
 
 header {
 	/*display: inline;*/
-	/*margin: 0;*/
+	margin: 0;
 	background-color: white;
 	float: left;
 }
@@ -42,7 +42,7 @@ header {
 --------------------------*/
 
 #intro {
-	/*margin: 0;*/
+	margin: 0;
 	background-color: yellow;
 }
 
