--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,10 @@ header {
 	background-color: white;
 }
 
+#logo {
+	float: left;
+}
+
 /* examples-----------------
 #columns {
 	-moz-column-count: 3;
@@ -41,12 +45,12 @@ header {
 #intro {
 	margin: 0;
 	background-color: yellow;
+	clear: left;
 }
 
 #explore {
 	margin: 0;
 	background-color: olive;
-	clear: both;
 }
 
 #main_nav {
