adding web based font family

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@
 	colorado red		cd1c24
 --------------------------------------------------*/
 
+/* Font to be used ---------------------------------
+	font-family: 'Dosis', sans-serif;
+--------------------------------------------------*/
+
 body {
 	margin: 0;
 	background-color: #fff;
