--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,9 @@
 
 /* Font to be used ---------------------------------
 	font-family: 'Dosis', sans-serif;
+	font-weight: 400;
+	font-weight: 500;
+	font-weight: 800;
 --------------------------------------------------*/
 
 body {
