--- a/css/main.css
+++ b/css/main.css
@@ -14,12 +14,24 @@
 body {
 	margin: 0;
 	background-color: #fff;
+	font-family: 'Dosis', sans-serif;
+	font-weight: 400;
 }
 
 #wrapper {
 	width: 800px;
 	margin: 0 auto;
 	background-color: #fff;
+}
+
+h1 {
+	font-family: 'Dosis', sans-serif;
+	font-weight: 800;
+}
+
+h2 h3 h4 h5 h6 {
+	font-family: 'Dosis', sans-serif;
+	font-weight: 500;
 }
 
 header {
