updating h1 text color

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,8 @@ body {
 h1 {
 	font-family: 'Dosis', sans-serif;
 	font-weight: 800;
-	text-shadow: 1px 1px #cd1c24;
+	color: #cd1c24
+	text-shadow: 1px 1px #003d73;
 }
 
 h2 h3 h4 h5 h6 {
