--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ body {
 h1 {
 	font-family: 'Dosis', sans-serif;
 	font-weight: 800;
-	color: #cd1c24
+	color: #cd1c24;
 	text-shadow: 1px 1px #003d73;
 }
 
