--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,8 @@
 
 body {
 	margin: 0;
-	background-color: #fff;
+	/*background-color: #fff;*/
+	background-image: ../images/COSbg.jpg;
 	font-family: 'Dosis', sans-serif;
 	font-weight: 400;
 }
