updating bg image

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
 
 body {
 	margin: 0;
-	background-image: url(../images/COSbg.jpg);
+	background-image: url(../images/bgCOS.jpg);
 	font-family: 'Dosis', sans-serif;
 	font-weight: 400;
 }
