--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,8 @@
 body {
 	margin: 0;
 	background-image: url(../images/bgCOS.jpg);
+	background-image: no-repeat;
+	background-position: center top;
 	font-family: 'Dosis', sans-serif;
 	font-weight: 400;
 }
