--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,7 @@
 --------------------------------------------------*/
 
 body {
-	/*margin: 0;*/
-	background-image: url(../images/bgCOS.jpg);
+	background-image: url(../images/COS_bg.jpg);
 	background-repeat: no-repeat;
 	background-position: top;
 	font-family: 'Dosis', sans-serif;
