--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ h2 h3 h4 h5 h6 {
 
 header {
 	margin: 0;
-	background-color: rgb (255,255,255);
+	background-color: rgba(255,255,255,0.8);
 }
 
 #logo {
