--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,8 @@ header {
 	margin: 0;
 	padding: 15px;
 	background-color: rgba(255,255,255,0.8);
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
 }
 
 #logo {
