--- a/css/main.css
+++ b/css/main.css
@@ -39,9 +39,8 @@ h2 h3 h4 h5 h6 {
 header {
 	margin: 0;
 	padding: 15px;
-	background-color: rgba(255,255,255,0.6);
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
+	background-color: rgba(255,255,255,0.8);
+	border-radius: 10px;
 }
 
 #logo {
