--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ h2 h3 h4 h5 h6 {
 }
 
 header {
-	margin: 0;
+	margin: 0 auto;
 	padding: 15px;
 	background-color: rgba(255,255,255,0.8);
 	border-radius: 10px;
