--- a/css/main.css
+++ b/css/main.css
@@ -38,14 +38,14 @@ h2 h3 h4 h5 h6 {
 
 header {
 	margin: 0 auto;
-	padding: 15px;
+	padding: 15px 0;
 	background-color: rgba(255,255,255,0.8);
 	border-radius: 10px;
 }
 
 #logo {
 	float: left;
-	margin: 0 30px 0 103px;
+	margin: 0 20px 0 103px;
 }
 
 #intro {
