--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,7 @@ body {
 	background-repeat: no-repeat;
 	background-position: top;
 	font-family: 'Dosis', sans-serif;
-	/*font-weight: 400;*/
-	font-size: large;
+	font-weight: 400;
 }
 
 #wrapper {
@@ -52,7 +51,7 @@ header {
 #intro {
 	margin: 0;
 	color: #fff;
-	font-size: 150%;
+	font-size: 30px;
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
 	clear: left;
 }
