--- a/css/main.css
+++ b/css/main.css
@@ -31,15 +31,15 @@ h1 {
 	text-shadow: 2px 2px #003d73;
 }
 
-h2 h3 h4 h5 h6 {
+h2 h3 {
 	font-family: 'Dosis', sans-serif;
 	font-weight: 500;
 }
 
-p {
-	display: block;
-	font-size: 150%;
-}
+ h4 h5 h6 {
+ 	font-family: 'Dosis', sans-serif;
+	font-weight: 400;
+ }
 
 header {
 	margin: 0 auto;
