--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
 	background-repeat: no-repeat;
 	background-position: top;
 	font-family: 'Dosis', sans-serif;
-	font-weight: 400;
+	/*font-weight: 400;*/
 }
 
 #wrapper {
