--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ header {
 #intro {
 	margin: 0;
 	color: #fff;
-	font-size: 30px;
+	/*font-size: 30px;*/
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
 	clear: left;
 }
