--- a/css/main.css
+++ b/css/main.css
@@ -56,9 +56,12 @@ header {
 #intro {
 	margin: 0;
 	color: #fff;
-	/*font-size: 30px;*/
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
 	clear: left;
+}
+
+#intro p {
+	font-size: 30px;
 }
 
 #explore {
