--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,7 @@ header {
 aside {
 	width: 300px;
 	background-color: rgba(255,165,0,0.8);
+	color: #fff;
 	float: right;
 	border-radius: 10px;
 }
