--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ aside {
 	width: 300px;
 	background-color: rgba(255,165,0,0.8);
 	color: #fff;
+	text-align: center;
 	float: right;
 	border-radius: 10px;
 }
