--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@ a:visited {
 
 a:hover {
 	color: #fff;
+	text-decoration: none;
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
 } /* Since any element can be hovered over this can apply to any element */
 
