--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,7 @@ ul {
 	padding: 10px;
 	background-color: rgba(0,61,115,0.5);
 	border-radius: 10px;
+	float: left;
 }
 
 #subscription_form {
@@ -152,7 +153,6 @@ ul {
 	background-color: #003d73;
 	color: #fff;
 	border-radius: 10px;
-	float: right;
 }
 
 /* examples-----------------
