--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,12 @@ header {
 	font-size: 20px;
 }
 
+#columns {
+	-moz-column-count:3; /* Firefox */
+	-webkit-column-count:3; /* Safari and Chrome */
+	column-count:3;
+}
+
 #explore {
 	width: 500px;
 	overflow: auto;
