--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,8 @@ header {
 	margin: 0 2px;
 	outline: none;
 	cursor: pointer;
+	font-family: 'Dosis', sans-serif;
+	font-weight: 400;
 	text-align: center;
 	text-decoration: none;
 	font: 14px/100% Arial, Helvetica, sans-serif;
@@ -144,7 +146,6 @@ header {
 	display: inline;
 	float: left;
 	margin: 0 10px;
-	background-color: rgba(255,255,255,0.8);
 	font-size: 20px;
 }
 
