--- a/css/main.css
+++ b/css/main.css
@@ -93,11 +93,10 @@ header {
 	margin: 0 2px;
 	outline: none;
 	cursor: pointer;
-	font-family: 'Dosis', sans-serif;
-	font-weight: 400;
+	/*font-weight: 400;*/
 	text-align: center;
 	text-decoration: none;
-	font: 14px/100% Arial, Helvetica, sans-serif;
+	font: 14px/100% 'Dosis', Helvetica, sans-serif;
 	padding: .5em 2em .55em;
 	text-shadow: 0 1px 1px rgba(0,0,0,.3);
 	-webkit-border-radius: .5em; 
