--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,6 @@ body {
 	background-position: top;
 	font-family: 'Dosis', sans-serif;
 	font-weight: 400;
-	color: #fff;
 }
 
 #wrapper {
@@ -167,6 +166,10 @@ aside {
 
 #photo_gallery p {
 	font-size: 20px;
+}
+
+#menu_sections {
+	color: #fff;
 }
 
 ol li {
