applying text shadow throughout

--- a/css/main.css
+++ b/css/main.css
@@ -171,11 +171,13 @@ aside {
 #menu_sections {
 	color: #fff;
 	font-size: 20px;
+	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
 }
 
 #footer {
 	color: #fff;
 	font-size: 20px;
+	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
 }
 
 ol li {
