applying border to img gallery

--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,7 @@ aside {
 ol li {
 	margin: 10px;
 	padding: 10px;
+	border: solid 1px #ff;
 	background: orange;
 	display: inline;
 	font-size: 20px;
