corrected hex value

--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,7 @@ aside {
 ol li {
 	margin: 10px;
 	padding: 10px;
-	border: solid 1px #ff;
+	border: solid 1px #fff;
 	background: orange;
 	display: inline;
 	font-size: 20px;
