--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,9 @@ header {
 }
 
 #world_champs {
-	background-color: #ccbe00;
+	background-color: rgba(204,190,0,.8);
+	border-radius: 10px;
+	padding: 10px;
 }
 
 #explore {
