editing article css

--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,8 @@ header {
 #world_champs {
 	background-color: rgba(204,190,0,.8);
 	border-radius: 10px;
-	padding: 5px;
+	text-align: center;
+	/* padding: 5px; */
 }
 
 #explore {
