applying correct css to correct element

--- a/css/main.css
+++ b/css/main.css
@@ -74,9 +74,12 @@ header {
 #world_champs {
 	background-color: rgba(204,190,0,.8);
 	border-radius: 10px;
-	font-size: 12px;
 	text-align: center;
 	/* padding: 5px; */
+}
+
+#world_champs p {
+	font-size: 12px;
 }
 
 #explore {
