enable text size in css

--- a/css/main.css
+++ b/css/main.css
@@ -78,9 +78,9 @@ header {
 	/* padding: 5px; */
 }
 
-/* #world_champs p {
+#world_champs p {
 	font-size: 15px;
-} */
+}
 
 #explore {
 	width: 500px;
