--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ h2 h3 {
  }
 
 header {
-	margin: 0 auto;
+	/* margin: 0 auto; */
 	padding: 15px 0;
 	background-color: rgba(255,255,255,0.8);
 	border-radius: 10px;
