--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ h2 h3 {
  }
 
 header {
-	/* margin: 0 auto; */
+	width: 100%; /* same width as wrapper */
 	padding: 15px 0;
 	background-color: rgba(255,255,255,0.8);
 	border-radius: 10px;
@@ -55,6 +55,7 @@ header {
 }
 
 #intro {
+	width: 100%; /* same width as wrapper */
 	margin: 0;
 	color: #fff;
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
@@ -72,6 +73,7 @@ header {
 }
 
 #world_champs {
+	width: 100%; /* same width as wrapper */
 	background-color: rgba(204,190,0,.8);
 	border-radius: 10px;
 	text-align: center;
@@ -83,7 +85,7 @@ header {
 }
 
 #explore {
-	width: 500px;
+	width: 62.5%; /* 500px /800px */
 	overflow: hidden;
 	margin: 0;
 	padding: 0;
@@ -161,7 +163,7 @@ header {
 }
 
 aside {
-	width: 300px;
+	width: 37.5%; /* 300px /800px */
 	background-color: rgba(255,165,0,0.8);
 	color: #fff;
 	text-align: center;
@@ -170,6 +172,7 @@ aside {
 }
 
 #photo_gallery {
+	width 100%; /* same wdith as wrapper */
 	margin: 0;
 	color: #fff;
 	clear: both;
@@ -180,12 +183,14 @@ aside {
 }
 
 #menu_sections {
+	width 100%; /* same width as wrapper */
 	color: #fff;
 	font-size: 20px;
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
 }
 
 #footer {
+	width: 100%; /* same width as wrapper */
 	color: #fff;
 	font-size: 20px;
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
@@ -230,7 +235,7 @@ ul {
 }
 
 #links {
-	width: 280px;
+	width: 40%; /* 320px /800px */
 	padding: 10px;
 	background-color: rgba(0,61,115,0.5);
 	border-radius: 10px;
@@ -238,7 +243,7 @@ ul {
 }
 
 #subscription_form {
-	width: 480px;
+	width: 60%; /* 480px /800px */
 	padding: 10px;
 	background-color: #003d73;
 	color: #fff;
