--- a/css/main.css
+++ b/css/main.css
@@ -240,7 +240,8 @@ ul {
 	padding: 10px;
 	background-color: rgba(0,61,115,0.5);
 	border-radius: 10px;
-	/* float: left; */
+	clear: both;
+	float: left;
 }
 
 #subscription_form {
