--- a/css/main.css
+++ b/css/main.css
@@ -250,7 +250,7 @@ ul {
 	background-color: #003d73;
 	color: #fff;
 	border-radius: 10px;
-	/*float: right;*/
+	float: right;
 }
 
 /* examples-----------------
