applying block display

--- a/css/main.css
+++ b/css/main.css
@@ -236,6 +236,7 @@ ul {
 }
 
 #links {
+	display: block;
 	margin: 0 auto;
 	width: 40%; /* 320px /800px */
 	padding: 10px;
@@ -245,6 +246,7 @@ ul {
 }
 
 #subscription_form {
+	display: block;
 	width: 60%; /* 480px /800px */
 	padding: 10px;
 	background-color: #003d73;
