--- a/css/main.css
+++ b/css/main.css
@@ -241,7 +241,7 @@ ul {
 	padding: 10px;
 	background-color: rgba(0,61,115,0.5);
 	border-radius: 10px;
-	/*float: left;*/
+	float: left;
 }
 
 #subscription_form {
