--- a/css/main.css
+++ b/css/main.css
@@ -236,12 +236,12 @@ ul {
 }
 
 #links {
-	display: block;
+	/*display: block;*/
 	width: 40%; /* 320px /800px */
 	padding: 10px;
 	background-color: rgba(0,61,115,0.5);
 	border-radius: 10px;
-	/*float: left;*/
+	float: left;
 }
 
 #subscription_form {
