--- a/css/main.css
+++ b/css/main.css
@@ -237,7 +237,7 @@ ul {
 
 #links {
 	/*display: block;*/
-	width: 40%; /* 320px /800px */
+	width: 37.5%; /* (320px - 20px padding) 300px /800px */
 	padding: 10px;
 	background-color: rgba(237,28,36,1.0);
 	border-radius: 10px;
@@ -246,7 +246,7 @@ ul {
 
 #subscription_form {
 	/*display: block;*/
-	width: 10%; /* 480px /800px */
+	width: 57.5%; /* (480px - 20px padding) 460px /800px */
 	padding: 10px;
 	background-color: #003d73;
 	color: #fff;
