--- a/css/main.css
+++ b/css/main.css
@@ -240,7 +240,7 @@ ul {
 	padding: 10px;
 	background-color: rgba(237,28,36,1.0);
 	border-radius: 10px;
-	float: left;
+	/*float: left;*/
 }
 
 #subscription_form {
