--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,7 @@ aside {
 
 #footer {
 	width: 100%; /* same width as wrapper */
+	display: block;
 	color: #fff;
 	font-size: 20px;
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
@@ -237,7 +238,7 @@ ul {
 
 #links {
 	width: 37.5%; /* (320px - 20px padding) 300px /800px */
-	padding: 10px;
+	padding: 10px 5px;
 	background-color: rgba(237,28,36,1.0);
 	border-radius: 10px;
 	float: left;
@@ -245,7 +246,7 @@ ul {
 
 #subscription_form {
 	width: 57.5%; /* (480px - 20px padding) 460px /800px */
-	padding: 10px;
+	padding: 10px 5px;
 	background-color: #003d73;
 	color: #fff;
 	border-radius: 10px;
