--- a/css/main.css
+++ b/css/main.css
@@ -245,7 +245,7 @@ ul {
 #subscription_form {
 	width: 57.5%; /* (480px - 20px padding) 460px /800px */
 	padding: 5px 10px;
-	background-color: #003d73;
+	background-color: rgba(0,61,115,0.5);
 	color: #fff;
 	border-radius: 10px;
 	float: right;
