--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
 --------------------------------------------------*/
 
 body {
+	max-width: 800px;
 	background-color: #632726;
 	background-image: url(../images/COS_bg.jpg);
 	background-repeat: no-repeat;
