--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@
 
 body {
 	max-width: 800px;
+	margin: 0 auto;
 	background-color: #632726;
 	background-image: url(../images/COS_bg.jpg);
 	background-repeat: no-repeat;
