--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
 	background-repeat: no-repeat;
 	background-position: top;
 	font-family: 'Dosis', sans-serif;
-	font-weight: 400;
+	/*font-weight: 400;*/
 }
 
 #wrapper {
@@ -218,7 +218,7 @@ a:visited {
 	color: #dc143c;
 }
 
-a:hover {
+a:hover { 
 	color: #fff;
 	text-decoration: none;
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
