--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body {
 	background-image: url(../images/COS_bg.jpg);
 	background-repeat: no-repeat;
 	background-position: top;
-	font-family: 'Dosis', sans-serif;
+	font: 100%/1.5 'Dosis', sans-serif;
 	/*font-weight: 400;*/
 }
 
