--- a/css/main.css
+++ b/css/main.css
@@ -36,12 +36,12 @@ h1 {
 
 h2 h3 {
 	font-family: 'Dosis', sans-serif;
-	/*font-weight: 500;*/
+	font-weight: 500;
 }
 
  h4 h5 h6 {
  	font-family: 'Dosis', sans-serif;
-	/*font-weight: 400;*/
+	font-weight: 400;
  }
 
 header {
