--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ h2 h3 {
 
 header {
 	width: 100%; /* same width as wrapper */
-	/*padding: 15px 0;*/
+	padding: 15px 0;
 	background-color: rgba(255,255,255,0.8);
 	border-radius: 10px;
 }
