--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ header {
 #logo {
 	float: left;
 	margin: 0 2.5% /* 20px/800px */ 0 13.25% /* 106px/800px */;
+	width: 25%; /* 200px/800px */
 }
 
 #intro {
@@ -65,7 +66,7 @@ header {
 }
 
 #intro p {
-	font-size: 20px;
+	font-size: 1.25em; /*20px*/
 }
 
 #columns {
@@ -83,7 +84,7 @@ header {
 }
 
 #world_champs p {
-	font-size: 15px;
+	font-size: .9375em; /*15px*/
 }
 
 #explore {
@@ -96,7 +97,7 @@ header {
 }
 
 #explore p {
-	font-size: 20px;
+	font-size: 1.25em; /*20px*/
 }
 
 /* begin button
@@ -161,7 +162,7 @@ header {
 	display: inline;
 	float: left;
 	margin: 0 2% /* 10px/500px */;
-	font-size: 20px;
+	font-size: 1.25em; /*20px*/
 }
 
 aside {
@@ -181,20 +182,20 @@ aside {
 }
 
 #photo_gallery p {
-	font-size: 20px;
+	font-size: 1.25em; /*20px*/
 }
 
 #menu_sections {
 	width 100%; /* same width as wrapper */
 	color: #fff;
-	font-size: 20px;
+	font-size: 1.25em; /*20px*/
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
 }
 
 #footer {
 	width: 100%; /* same width as wrapper */
 	color: #fff;
-	font-size: 20px;
+	font-size: 1.25em; /*20px*/
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
 }
 
@@ -204,7 +205,7 @@ ol li {
 	border: solid 1px #fff;
 	background: orange;
 	display: inline;
-	font-size: 20px;
+	font-size: 1.25em; /*20px*/
 }
 
 /* pseudo classes for styling links */
