--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ body {
 #wrapper {
 	width: 100%; /* 800px */;
 	margin: 0 auto;
+	background-color: rgba(255,255,255,0.8);
 }
 
 h1 {
@@ -47,8 +48,8 @@ h2 h3 {
 header {
 	width: 100%; /* same width as wrapper */
 	padding: 10px 0;
-	background-color: rgba(255,255,255,0.8);
-	border-radius: 10px;
+	/*background-color: rgba(255,255,255,0.8);
+	border-radius: 10px;*/
 }
 
 #logo {
