--- a/css/main.css
+++ b/css/main.css
@@ -263,15 +263,42 @@ ul {
 
 /* Tablet Portrait size to standard 960 (devices and browsers) */
 @media screen and (min-width: 768px) and (max-width:799px) {
-
+	#logo {
+		float: none;
+	}
+	
+	#columns {
+	-moz-column-count:0; /* Firefox */
+	-webkit-column-count:0; /* Safari and Chrome */
+	column-count:0;
+	}
+	
 }
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width:767px) {
-
+	#logo {
+		float: none;
+	}
+	
+	#columns {
+	-moz-column-count:0; /* Firefox */
+	-webkit-column-count:0; /* Safari and Chrome */
+	column-count:0;
+	}
+	
 }
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width:479px) {
-
+	#logo {
+		float: none;
+	}
+	
+	#columns {
+	-moz-column-count:0; /* Firefox */
+	-webkit-column-count:0; /* Safari and Chrome */
+	column-count:0;
+	}
+	
 }
