--- a/css/main.css
+++ b/css/main.css
@@ -263,9 +263,14 @@ ul {
 
 /* Tablet Portrait size to standard 960 (devices and browsers) */
 @media screen and (min-width: 768px) and (max-width:799px) {
-	/*#logo {
+
+	header {
+		width: auto;
+	}
+
+	#logo {
 		float: none;
-	}*/
+	}
 	
 	#columns {
 	-moz-column-count:0; /* Firefox */
@@ -277,6 +282,11 @@ ul {
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width:767px) {
+
+	header {
+		width: auto;
+	}
+
 	#logo {
 		float: none;
 	}
@@ -291,6 +301,11 @@ ul {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width:479px) {
+
+	header {
+		width: auto;
+	}
+
 	#logo {
 		float: none;
 	}
