--- a/css/main.css
+++ b/css/main.css
@@ -277,6 +277,11 @@ ul {
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width:767px) {
+
+	body {
+		background-image: none;
+	}
+
 	#logo {
 		float: none;
 	}
@@ -291,6 +296,12 @@ ul {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width:479px) {
+
+	body {
+		background-image: none;
+	}
+
+
 	#logo {
 		float: none;
 	}
